linebreak fix in config example, make some config options optional (status template, extraargs)

--- a/config.example.yml
+++ b/config.example.yml
@@ -82,7 +82,7 @@ pages:
 contestPages:
     resultsSection: Resultater
     participantsSection: 'Delta[kg]ere'
-    footer: '{{ukens konkurranse %(year)s}}\n[[Kategori:Artikkelkonkurranser]]'
+    footer: "{{ukens konkurranse %(year)s}}\n[[Kategori:Artikkelkonkurranser]]"
 awardstatus: 
     pagename: Bruker:UKBot/Premieutsendelse
     wait: Venter
