updated .gitmodules to work with read-only as well

--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = git://github.com/danmichaelo/danmicholoparser.git
 [submodule "mwclient"]
 	path = mwclient
-	url = git@github.com:danmichaelo/mwclient.git
+	url = git://github.com/danmichaelo/mwclient.git
