Ignore rollback comments from list in config

--- a/config/config.example.yml
+++ b/config/config.example.yml
@@ -115,3 +115,5 @@ noticeboard:
     template: 
         name: la stå/uk
         date: dato
+ignore:
+    - Reverted edits by  # MediaWiki:Revertpage/en
