Update lighttpd.conf to add trailing slash

--- a/.lighttpd.conf
+++ b/.lighttpd.conf
@@ -1,16 +1,17 @@
-# Add trailing slash
-#$HTTP["url"] !~ "^(.*)(\..{2,3}|/)$" {
-#        url.redirect = (".*" => "$1/")
-#}
-
 $HTTP["url"] !~ ".*\.[a-z]{2,3}$" {
-    fastcgi.server += ( "/ukbot" =>
-        ((
+ 
+    # Add trailing slash
+    url.redirect = (
+        "^/([^?/]+)(\?.*)?$" => "/$1/$2"
+    )
+ 
+    fastcgi.server += ( "/" =>
+        ((  
             "socket" => "/tmp/ukbot-fcgi.sock",
             "bin-path" => "/data/project/ukbot/server.sh",
             "check-local" => "disable",
             "max-procs" => 1,
-        ))
+        ))  
     )
+ 
 }
-
