--- a/config/config.example.yml
+++ b/config/config.example.yml
@@ -100,6 +100,7 @@ templates:
         alias: alias
         maxdepth: maksdybde
         redirects: omdirigeringer 
+        ignore: utelat
 pages:
     catignore: Bruker:UKBot/cat-ignore
     base: Wikipedia:Ukens konkurranse/Ukens konkurranse
