Add missing dependency: datetime

--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,4 @@ matplotlib
 git+git://github.com/mwclient/mwclient.git
 git+git://github.com/danmichaelo/mwtemplates.git
 git+git://github.com/danmichaelo/mwtextextractor.git
+datetime
