Add missing deps

--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,7 @@ git+git://github.com/mwclient/mwclient.git
 git+git://github.com/danmichaelo/mwtemplates.git
 git+git://github.com/danmichaelo/mwtextextractor.git
 datetime
+rollbar
+flup
+flask
+requests[security]
