Add ownwork param for ImageRule

--- a/config/config.example.yml
+++ b/config/config.example.yml
@@ -87,6 +87,7 @@ templates:
         wordbonus: ordbonus
         alias: alias
         own: own 
+        ownwork: ownwork
         maxinitialcount: maxinitialcount
     filter:
         name: Ukens konkurranse kriterium
