Update config example with wikidata sitelink update/remove

--- a/config/config.example.yml
+++ b/config/config.example.yml
@@ -131,3 +131,5 @@ noticeboard:
         date: dato
 ignore:
     - Reverted edits by  # MediaWiki:Revertpage/en
+    - clientsitelink-update  # Wikidata: Page moved from .. to ..
+    - clientsitelink-remove  # Wikidata: Removed sitelink
