--- a/config/config.example.yml
+++ b/config/config.example.yml
@@ -7,6 +7,8 @@ default_prefix: fi
 db:
     host: tools-db
     db: SOME-USERNAME__uk
+    user: USERNAME
+    password: PASSWORD
 plot:
     datafile: ../plots/no.json
     figname: 'Nowp Ukens konkurranse %(year)d-%(week)02d.svg'
@@ -115,6 +117,7 @@ pages:
     base: Wikipedia:Ukens konkurranse/Ukens konkurranse
     default: Wikipedia:Ukens konkurranse/Ukens konkurranse %(year)d-%(week)02d
     redirect: WP:UK
+    active_contests_category: Category:UKB active contests
 contestPages:
     resultsSection: Resultater
     participantsSection: 'Delta[kg]ere'
