Fix/add websocket status page

--- a/.lighttpd.conf
+++ b/.lighttpd.conf
@@ -1,17 +1,17 @@
 $HTTP["url"] !~ ".*\.[a-z]{2,3}$" {
- 
+
     # Add trailing slash
     url.redirect = (
         "^/([^?/]+)(\?.*)?$" => "/$1/$2"
     )
- 
+
     fastcgi.server += ( "/" =>
-        ((  
+        ((
             "socket" => "/tmp/ukbot-fcgi.sock",
-            "bin-path" => "/data/project/ukbot/server.sh",
+            "bin-path" => "APP_BASE_HREF=http://tools.wmflabs.org/ukbot/ /data/project/ukbot/server.sh",
             "check-local" => "disable",
             "max-procs" => 1,
-        ))  
+        ))
     )
- 
+
 }
