--- a/config/config.fi.yml
+++ b/config/config.fi.yml
@@ -82,25 +82,8 @@ templates:
         own: oma
         ownwork: oma teos
         maxinitialcount: makskuvienmäärä
-    filter:
-        name: Viikon kilpailu kriteerit
-        new: uusi
-        existing: löytyvä
-        template: malline
-        bytes: tavut
-        category: luokka
-        backlink: takaisinlinkitys
-        forwardlink: edelleenlinkitys
-        pages: sivut
-        namespace: nimiavaruus
-        alias: alias
-        maxdepth: makssyvyys
-        redirects: ohjaukset
-        ignore: ignore
-        sparql: sparql  # as in {{ ukb criterion | sparql }}
-        query: query    # as in {{ ukb criterion | sparql | query=... }}
+    filters: !include filters.fi.yml
 pages:
-    catignore: Käyttäjä:UKBot/cat-ignore
     base: Wikipedia:Viikon kilpailu/Viikon kilpailu
     default: Wikipedia:Viikon kilpailu/Viikon kilpailu %(year)d-%(week)02d
 contestPages:
