Continue filter refactoring/cleanup
To support the injection of the Contest and Sites into the filters, we introduced the make method. This commit improves the general code quality of the filter handling.

--- a/config/filters.no.yml
+++ b/config/filters.no.yml
@@ -19,6 +19,8 @@ params:
             maxdepth: maksdybde
     backlink:
         name: tilbakelenke
+        params:
+            include_langlinks: true
     forwardlink:
         name: fremlenke
     pages:
