--- a/config/config.no.yml
+++ b/config/config.no.yml
@@ -37,11 +37,10 @@ awards:
     lyslilla: { file: Article MediumPurple.svg }
     lilla: { file: Article purple.svg }
     brun: { file: Article brown.svg }
-award_message:
-    winner_template: UK vinner          # template name
-    participant_template: UK deltaker   # template name
-    organizer_template: UK arrangør     # template name
-    extraargs: "|visuk=nei"             # template argument
+award_messages:
+    winner_template: '{{UK vinner|år=%(year)s|uke=%(week)s|%(award)s=ja}}'
+    participant_template: '{{UK deltaker|år=%(year)s|uke=%(week)s|%(award)s=ja}}'
+    organizer_template: '{{UK arrangør|år=%(year)s|uke=%(week)s|%(award)s=ja|visuk=nei}}'
 templates:
     botinfo: Ukens konkurranse robotinfo
     status: Ukens konkurranse status
