Add sewiki to fi config

--- a/config/config.fi-pln.yml
+++ b/config/config.fi-pln.yml
@@ -3,6 +3,8 @@ rollbar_token: 88f5bd483f7348ea8b0564449c8d77cd
 server_timezone: UTC
 wiki_timezone: Europe/Helsinki
 homesite: fi.wikipedia.org
+othersites:
+    - se.wikipedia.org
 default_prefix: fi
 plot:
     datafile: plots/Punaisten linkkien naiset %(year)d.json
