--- a/config/config.fi.yml
+++ b/config/config.fi.yml
@@ -36,6 +36,7 @@ award_messages:
     winner_template: '{{VK voittaja|vuosi=%(year)s|viikko=%(week)s|%(award)s=kyllä}}'
     participant_template: '{{VK osallistuja|vuosi=%(year)s|viikko=%(week)s|%(award)s=kyllä}}'
     organizer_template: '{{VK järjestäjä|vuosi=%(year)s|viikko=%(week)s|%(award)s=kyllä}}'
+    reminder_msg: 'Muista, että tämän viikon kilpailu on [[%(url)s|{{Viikon kilpailu luettelo|viikko=%(year)d-%(week)02d}}]]. Onnea matkaan!'
 templates:
     botinfo: Viikon kilpailu robotti-info
     status: Viikon kilpailu tilanne
