--- a/config/config.no-mk.yml
+++ b/config/config.no-mk.yml
@@ -41,6 +41,7 @@ award_messages:
     winner_template: '{{UK vinner|år=%(year)s|måned=%(month)s|%(award)s=ja}}'
     participant_template: '{{UK deltaker|år=%(year)s|måned=%(month)s|%(award)s=ja}}'
     organizer_template: '{{UK arrangør|år=%(year)s|måned=%(month)s|%(award)s=ja|visuk=nei}}'
+    reminder_msg: 'Husk at denne månedens konkurranse er [[%(url)s|{{#invoke:UK navboks|contest_name|%(year)d|%(month)d}}]]. Lykke til!'
 templates:
     botinfo: Ukens konkurranse robotinfo
     status: Ukens konkurranse status
