Update fi-ek config

--- a/config/config.fi-ek.yml
+++ b/config/config.fi-ek.yml
@@ -76,4 +76,4 @@ pages:
 contestPages:
     resultsSection: Tulokset
     participantsSection: Osallistujat
-    footer: "[[Luokka:Elokuun kuvitustalkoot|2015]]"
+    footer: "[[Luokka:Elokuun kuvitustalkoot|%(year)d]]"
