--- a/config/config.fi.yml
+++ b/config/config.fi.yml
@@ -84,6 +84,9 @@ templates:
         own: oma
         ownwork: oma teos
         maxinitialcount: makskuvienmäärä
+        wikidata: wikidata
+        properties: properties
+        require_reference: require_reference
     filters: !include filters.fi.yml
 pages:
     base: Wikipedia:Viikon kilpailu/Viikon kilpailu
