--- a/config/config.fi-pln.yml
+++ b/config/config.fi-pln.yml
@@ -69,6 +69,9 @@ templates:
         own: oma
         ownwork: oma teos
         maxinitialcount: makskuvienmäärä
+        wikidata: wikidata
+        properties: properties
+        require_reference: require_reference
     filters: !include filters.fi.yml
 pages:
     catignore: Käyttäjä:UKBot/cat-ignore
