--- a/config/config.no.yml
+++ b/config/config.no.yml
@@ -88,6 +88,9 @@ templates:
         own: egetbilde
         ownwork: egetverk
         maxinitialcount: maksantallinnledningsvis
+        wikidata: wikidata
+        properties: egenskaper
+        require_reference: krevreferanse
     filters: !include filters.no.yml
 pages:
     base: Wikipedia:Konkurranser/Ukens konkurranse
