Filter out Author Disambiguator edits
Per
https://no.wikipedia.org/wiki/Wikipedia-diskusjon:Konkurranser/Månedens_konkurranse_2019-09#Bot_stoppet

--- a/config/config.no-mk.yml
+++ b/config/config.no-mk.yml
@@ -117,3 +117,4 @@ ignore:
     - Undo revision # MediaWiki:Revertpage/en
     - clientsitelink-update  # Wikidata: Page moved from .. to ..
     - clientsitelink-remove  # Wikidata: Removed sitelink
+    - '#temporary_batch'  # QuickStatements Author Disambiguator o.l.
