Add shared 'site' parameter for all filters

--- a/config/filters.eu.yml
+++ b/config/filters.eu.yml
@@ -1,6 +1,9 @@
 ---
 name: UKB irizpide
 params:
+    _all:
+        params:
+            site: site
     new:
         name: berria
         params:
