--- a/config/filters.no.yml
+++ b/config/filters.no.yml
@@ -1,6 +1,9 @@
 ---
 name: Ukens konkurranse kriterium
 params:
+    _all:
+        params:
+            site: nettsted
     new: 
         name: ny
         params:
